# StriderWar

./: .gitignore  CMakeLists.txt  LICENSE-MIT  README.md
include/: bullet.hpp  condition.hpp  cube.hpp  debug.hpp  dummy.hpp  fixed.hpp  fixed_math.hpp  generated_luts.hpp  graphics.hpp  joystick.hpp  player.hpp  ship.hpp  song_data.hpp  sound.hpp  sprite_map.hpp  strider.hpp  world.hpp
include/fixed/: fixed.hpp
include/songs/: drum0.hpp  drum1.hpp  drum2.hpp  pattern0.hpp  pattern1.hpp  pattern2.hpp
libraries/: CMakeLists.txt
libraries/graphics/: CMakeLists.txt  README.md
libraries/graphics/images/: layout.vsdx
libraries/graphics/include/dos/: graphics.hpp
libraries/graphics/include/dos/graphics/: cgamap.hpp  draw.hpp  video.hpp
libraries/graphics/media/: CGA1.ACT  CGA2.ACT
libraries/graphics/scripts/: cga_sprite.py  png2cga.py  requirements.txt
libraries/graphics/source/: cgamap.cpp  draw.cpp  graphics.cpp  video.cpp
libraries/input/: CMakeLists.txt
libraries/input/include/dos/: input.hpp
libraries/input/include/dos/input/: interface.hpp  joystick.hpp  keyboard.hpp
libraries/input/source/: joystick.cpp  keyboard.cpp
libraries/math/: CMakeLists.txt
libraries/math/include/: luts.hpp  math.hpp
libraries/math/include/dos/: math.hpp
libraries/math/include/dos/math/: luts.hpp
libraries/math/include/dos/math/fixed/: fixed.hpp  fixed_math.hpp
libraries/math/include/math/: math_lut.hpp  types.hpp
libraries/math/include/math/fixed/: fixed.hpp  fixed_math.hpp
libraries/math/scripts/: generate_luts.py
libraries/math/source/: fixed_math.cpp
libraries/rand/: CMakeLists.txt
libraries/rand/include/: rand.hpp
libraries/rand/include/dos/rand/: rand.hpp  rand_lut.hpp
libraries/rand/include/rand/: rand.hpp  rand_lut.hpp
libraries/rand/scripts/: generate_luts.py
libraries/rand/source/: rand.cpp
libraries/sound/: CMakeLists.txt
libraries/sound/include/dos/: sound.hpp
libraries/sound/include/dos/sound/: sound.hpp
libraries/sound/scripts/: convert_audio_to_sn76496.py  noise_encoder.py
libraries/sound/source/: sound.cpp
libraries/time/: CMakeLists.txt
libraries/time/include/: time.hpp
libraries/time/include/dos/: time.hpp
libraries/time/include/time/: timer.hpp
libraries/time/source/: time.cpp  timer.cpp
media/: .gitignore  Chop.psd  Proto.psd
scripts/: RunDB.bat  check_size.bat  deploy.ps1  dosbox-x.conf  gen_sprites.bat  generate_luts.py  monitor_size.ps1  run.ps1  update_sprite_map.py
source/: bullet.cpp  condition.cpp  cube.cpp  debug.cpp  fixed_math.cpp  graphics.cpp  joystick.cpp  main.cpp  player.cpp  ship.cpp  sound.cpp  strider.cpp  world.cpp
